# trylo_core

./: .gitignore  Makefile  README.md  calib_data.npz  power_on.py  requirements.txt  start_script.sh  start_script_cs.sh  start_trylo.py  start_vision_control_system.sh
src/: definitions.py  parameters.py
src/trylo_aruco/: CMakeLists.txt  package.xml
src/trylo_aruco/launch/: launch_aruco.xml
src/trylo_aruco/scripts/: aruco_tracker.py  control.py  motor_handler.py
src/trylo_camera/: package.xml  setup.cfg  setup.py
src/trylo_camera/trylo_camera/: img_pub.py  img_sub.py
src/trylo_control/: CMakeLists.txt  package.xml
src/trylo_control/msg/: Led.msg  Reference.msg
src/trylo_control/scripts/: __init__.py  n_control.py  n_refgen.py  n_tst_ref.py
src/trylo_control/trylo_control/: VisionKalmanFilter.py  __init__.py  definitions.py  parameters.py  utils.py
src/trylo_gpio/: CMakeLists.txt  package.xml
src/trylo_gpio/msg/: CmdLed.msg
src/trylo_gpio/scripts/: __init__.py  ffNode.py  ff_motor.py  n_pub_cmd.py  n_robot.py  pub_pwm.py
src/trylo_gpio/trylo_gpio/: Directive.py  Trylo.py  __init__.py  names.py
src/trylo_launch/: CMakeLists.txt  package.xml
src/trylo_launch/launch/: test_control.xml  test_motors.xml  test_refgen.xml  vision_control.xml  vision_nodes.xml
src/trylo_launch/trylo_launch/: __init__.py
src/trylo_motor/: CMakeLists.txt  package.xml
src/trylo_motor/msg/: Command.msg
src/trylo_motor/scripts/: control.py  motor_handler.py
src/trylo_motor/trylo_motor/: Commands.py
src/trylo_start/: package.xml  setup.cfg  setup.py
src/trylo_start/trylo_start/: func_test.py
src/trylo_vision/: CMakeLists.txt  package.xml
src/trylo_vision/include/trylo_vision/: calibration_procedure.py  parameters.py
src/trylo_vision/msg/: Aruco.msg  Marker.msg  MarkersDetected.msg  Pair.msg
src/trylo_vision/scripts/: __init__.py  n_aruco_detector.py  n_aruco_drawer.py  n_camera.py
src/trylo_vision/trylo_vision/: __init__.py  parameters.py
